# node-dns-recorder

./: .dockerignore  .editorconfig  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
manifests/: deployment.yaml
